--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,9 @@
   --accent-color: #9c89f5;
 }
 
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700&family=Roboto:wght@100;300;400;500;700;900&display=swap");
+
 .App {
   background-color: #1b1b1b;
+  font-family: Roboto, sans-serif;
 }
