--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -34,6 +34,10 @@
   text-decoration: none;
 }
 
+.About .active {
+  color: var(--accent-color);
+}
+
 .About p {
   color: white;
   line-height: 31px;
