--- a/src/components/CurrentWorkSection.css
+++ b/src/components/CurrentWorkSection.css
@@ -38,3 +38,42 @@
 .image-right {
   order: 1;
 }
+
+@media (max-width: 992px) {
+  .CurrentWorkSection .row {
+    margin: 20px 0;
+  }
+
+  .CurrentWorkSection p {
+    font-size: 14px;
+    line-height: 20px;
+  }
+
+  .image-right {
+    order: 0;
+  }
+
+  .CurrentWorkSection .description {
+    margin-top: 0;
+  }
+
+  .description h4 {
+    font-size: 28px;
+  }
+}
+
+@media (max-width: 767px) {
+  .CurrentWorkSection .description {
+    margin-top: 20px;
+    margin-left: 0;
+  }
+
+  .CurrentWorkSection {
+    text-align: center;
+  }
+
+  .CurrentWorkSection p {
+    font-size: 16px;
+    line-height: 22px;
+  }
+}
