--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -49,3 +49,44 @@ body {
   margin-bottom: 20px;
   font-size: 16px;
 }
+
+@media (max-width: 767px) {
+  .Contact h2 {
+    font-size: 40px;
+    padding: 40px;
+    margin: 0;
+  }
+
+  .Contact h3 {
+    margin-top: 20px;
+  }
+
+  .Contact .contact-details {
+    margin: 20px 0 50px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .Contact a {
+    font-size: 18px;
+    margin-bottom: 15px;
+  }
+}
+
+@media (max-width: 767px) {
+  .Contact h2 {
+    font-size: 40px;
+    padding: 40px;
+    margin: 0;
+  }
+
+  .Contact h3 {
+    font-size: 22px;
+    margin-top: 20px;
+  }
+
+  .Contact a {
+    font-size: 15px;
+    margin-bottom: 15px;
+  }
+}
