--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -74,3 +74,45 @@
   margin-bottom: 20px;
   font-size: 16px;
 }
+
+@media (max-width: 992px) {
+  .About h4 {
+    font-size: 36px;
+    text-align: center;
+  }
+
+  .About h1 {
+    font-size: 48px;
+    margin: 17px 0;
+    text-align: center;
+  }
+
+  .About p {
+    display: block;
+    line-height: 27px;
+    margin: 30px auto;
+    font-size: 16px;
+    text-align: center;
+    max-width: 100%;
+  }
+
+  .About .row {
+    margin: 30px auto;
+    margin-bottom: 50px;
+  }
+
+  .About img {
+    max-width: 60%;
+    display: block;
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: 767px) {
+  .About h1 {
+    font-size: 40px;
+  }
+  .About img {
+    max-width: 100%;
+  }
+}
